// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Email renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 ftPOyc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 ftPOyc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 ftPOyc"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          disabled={true}
          placeholder=" "
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 fCNdsc"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 hiJSVK"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 liUDyj"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder=" "
          readOnly={true}
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="xsmall"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder="small"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 iZYQRx"
          placeholder="medium"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 bVigKL"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 eRgNAh"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 dKhopI"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
